[package]
name = "crowdfunding-esdt"
version = "0.0.0"
authors = [ "Adil Anees",]
edition = "2018"
publish = false

[lib]
path = "src/crowdfunding_esdt.rs"

[dependencies.elrond-wasm]
version = "0.25.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.25.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
